<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>msl-ratings-edge</groupId>
    <artifactId>msl-ratings-edge</artifactId>
    <packaging>jar</packaging>
    <version>${msl-server.version}</version>

    <profiles>

        <profile>
            <id>build</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>${exec-maven-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>npm run parse-ratings-edge-src</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <phase>clean</phase>
                                <configuration>
                                    <executable>npm</executable>
                                    <workingDirectory>../../msl-pages</workingDirectory>
                                    <arguments>
                                        <argument>run</argument>
                                        <argument>parse-ratings-edge-src</argument>
                                    </arguments>
                                </configuration>
                            </execution>

                            <!-- GENERATE SWAGGER CODEGEN CODE -->
                            <execution>
                                <id>swagger codegen generator</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <phase>clean</phase>
                                <configuration>
                                    <executable>java</executable>
                                    <arguments>
                                        <argument>-XX:MaxPermSize=256M</argument>
                                        <argument>-Xmx1024M</argument>

                                        <argument>-Dapis</argument>

                                        <argument>-jar</argument>
                                        <argument>${swagger-codegen-cli-jar}</argument>

                                        <argument>generate</argument>

                                        <!--Yaml swagger specification file-->
                                        <argument>-i</argument>
                                        <argument>${yaml-spec}</argument>
                                        <!--Specifies language-->
                                        <argument>-l</argument>
                                        <argument>jaxrs</argument>
                                        <!--Output-->
                                        <argument>-o</argument>
                                        <argument>${output-directory}</argument>
                                        <!--Configuration-->
                                        <argument>-c</argument>
                                        <argument>${json-configuration-file}</argument>

                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.eclipse.jetty</groupId>
                        <artifactId>jetty-maven-plugin</artifactId>
                        <version>${jetty-version}</version>
                        <configuration>
                            <webApp>
                                <contextPath>/</contextPath>
                            </webApp>
                            <webAppSourceDirectory>target/${project.artifactId}-${project.version}</webAppSourceDirectory>
                            <stopPort>8079</stopPort>
                            <stopKey>stopit</stopKey>
                            <httpConnector>
                                <port>9004</port>
                                <idleTimeout>60000</idleTimeout>
                            </httpConnector>
                            <webXml>override-web.xml</webXml>
                        </configuration>
                        <executions>
                            <execution>
                                <id>start-jetty</id>
                                <phase>pre-integration-test</phase>
                                <goals>
                                    <goal>start</goal>
                                </goals>
                                <configuration>
                                    <scanIntervalSeconds>0</scanIntervalSeconds>
                                    <daemon>true</daemon>
                                </configuration>
                            </execution>
                            <execution>
                                <id>stop-jetty</id>
                                <phase>post-integration-test</phase>
                                <goals>
                                    <goal>stop</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                </plugins>
            </build>
        </profile>

        <profile>
            <id>no-tests</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <skipTests>true</skipTests>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>${maven-war-plugin.version}</version>
            </plugin>

            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-failsafe-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-junit47</artifactId>
                        <version>${surefire-junit47.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <testFailureIgnore>true</testFailureIgnore>
                    <include>**/*Test.java</include>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>${build-helper-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>src/main/java</source>
                                <source>src/gen/java</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <!-- FORMATTER -->

            <plugin>
                <groupId>net.revelc.code</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>${formatter-maven-plugin.version}</version>
                <configuration>
                    <configFile>${project.basedir}/src/main/resources/maven-styles.xml</configFile>
                    <compilerSource>1.8</compilerSource>
                    <compilerCompliance>1.8</compilerCompliance>
                    <compilerTargetPlatform>1.8</compilerTargetPlatform>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.googlecode.maven-java-formatter-plugin</groupId>
                <artifactId>maven-java-formatter-plugin</artifactId>
                <version>${maven-java-formatter-plugin.version}</version>
                <configuration>
                    <configFile>${project.basedir}/src/main/resources/maven-styles.xml</configFile>
                    <compilerSource>1.8</compilerSource>
                    <compilerCompliance>1.8</compilerCompliance>
                    <compilerTargetPlatform>1.8</compilerTargetPlatform>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${maven-surefire-report-plugin.version}</version>
            </plugin>
        </plugins>
    </reporting>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.glassfish.jersey</groupId>
                <artifactId>jersey-bom</artifactId>
                <version>${jersey.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.glassfish.jersey.containers</groupId>
            <artifactId>jersey-container-servlet-core</artifactId>
            <!-- use the following artifactId if you don't need servlet 2.x compatibility -->
            <!-- artifactId>jersey-container-servlet</artifactId -->
        </dependency>
        <dependency>
            <groupId>io.swagger</groupId>
            <artifactId>swagger-codegen-maven-plugin</artifactId>
            <version>${swagger-codegen-maven-plugin.version}</version>
        </dependency>
        <dependency>
            <groupId>io.swagger</groupId>
            <artifactId>swagger-jersey-jaxrs</artifactId>
            <version>${swagger-core-version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${slf4j-version}</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>${servlet-api-version}</version>
        </dependency>
        <dependency>
            <groupId>com.netflix.rxjava</groupId>
            <artifactId>rxjava-core</artifactId>
            <version>${rxjava-core.version}</version>
        </dependency>
        <dependency>
            <groupId>com.datastax.cassandra</groupId>
            <artifactId>cassandra-driver-core</artifactId>
            <version>${cassandra-driver-core.version}</version>

        </dependency>
        <dependency>
            <groupId>com.datastax.cassandra</groupId>
            <artifactId>cassandra-driver-mapping</artifactId>
            <version>${cassandra-driver-core.version}</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit-version}</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito-version}</version>
        </dependency>

        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-client</artifactId>
            <version>${resteasy-client}</version>
        </dependency>

        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-jackson2-provider</artifactId>
            <version>${org-jboss-resteasy.version}</version>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <artifactId>junit</artifactId>
                    <groupId>junit</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>snakeyaml</artifactId>
                    <groupId>org.yaml</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>bsh</artifactId>
                    <groupId>org.beanshell</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-client</artifactId>
        </dependency>

        <dependency>
            <groupId>net.revelc.code</groupId>
            <artifactId>formatter-maven-plugin</artifactId>
            <version>${formatter-maven-plugin.version}</version>
        </dependency>

        <dependency>
            <groupId>com.googlecode.maven-java-formatter-plugin</groupId>
            <artifactId>maven-java-formatter-plugin</artifactId>
            <version>${maven-java-formatter-plugin.version}</version>
        </dependency>

        <dependency>
            <groupId>msl.server</groupId>
            <artifactId>msl-common</artifactId>
            <version>${msl-server.version}</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>sonatype-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <properties>
        <swagger-codegen-cli-jar>../../common/swagger-codegen-cli.jar</swagger-codegen-cli-jar>
        <output-directory>../msl-ratings-edge</output-directory>
        <yaml-spec>../../msl-pages/swagger/api/swagger/swagger.yaml</yaml-spec>
        <json-configuration-file>../../msl-pages/swagger/package.json</json-configuration-file>

        <exec-maven-plugin.version>1.3.2</exec-maven-plugin.version>
        <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>2.19</maven-surefire-plugin.version>
        <maven-war-plugin.version>2.1.1</maven-war-plugin.version>
        <maven-failsafe-plugin.version>2.6</maven-failsafe-plugin.version>
        <maven-surefire-report-plugin.version>2.19</maven-surefire-report-plugin.version>
        <swagger-core-version>1.5.4</swagger-core-version>
        <swagger-codegen-maven-plugin.version>2.1.4</swagger-codegen-maven-plugin.version>
        <surefire-junit47.version>2.19</surefire-junit47.version>
        <testng.version>6.8.8</testng.version>
        <build-helper-maven-plugin.version>1.9.1</build-helper-maven-plugin.version>
        <jetty-version>9.2.9.v20150224</jetty-version>
        <slf4j-version>1.6.3</slf4j-version>
        <junit-version>4.10</junit-version>
        <servlet-api-version>2.5</servlet-api-version>
        <jersey.version>2.4.1</jersey.version>
        <resteasy-client>3.0.2.Final</resteasy-client>
        <rxjava-core.version>0.20.7</rxjava-core.version>
        <cassandra-driver-core.version>2.1.9</cassandra-driver-core.version>
        <mockito-version>1.9.5</mockito-version>
        <org-jboss-resteasy.version>3.0.13.Final</org-jboss-resteasy.version>
        <formatter-maven-plugin.version>0.5.2</formatter-maven-plugin.version>
        <maven-java-formatter-plugin.version>0.4</maven-java-formatter-plugin.version>

        <msl-server.version>1.0.0</msl-server.version>
    </properties>

</project>
